<body class="text-gray-800 antialiased">

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="text-gray-800 antialiased">
+
+
+
+
+
+
+
+        
     
 </body>
 </html>
