<!-- Navigation -->   <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 </head>
 <body class="text-gray-800 antialiased">
 
+<!-- Navigation -->
+<nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">
 
 
 
 
 
 
-        
     
 </body>
 </html>
