<!-- Nav Left Side -->           <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">               <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white" href="https://www.visitisleofwight.co.uk/" style="font-family: 'Lemonada', cursive;">                 <!-- Nav Title -->

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 <!-- Navigation -->
 <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">
         <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
-
+                <!-- Nav Left Side -->
+                <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
+                        <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white" href="https://www.visitisleofwight.co.uk/" style="font-family: 'Lemonada', cursive;">
+                        <!-- Nav Title -->
 
 
 
