<!-- Nav Title -->                 Attractions in Isle Of Wight               </a>               <!-- Hamburger Menu (Mobile) -->               <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">                 <!-- Icon -->                 <i class="text-white fas fa-bars"></i>               </button>           </div>

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
                         <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white" href="https://www.visitisleofwight.co.uk/" style="font-family: 'Lemonada', cursive;">
                         <!-- Nav Title -->
+                                Attractions in Isle Of Wight
+                        </a>
+                        <!-- Hamburger Menu (Mobile) -->
+                        <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">
+                        <!-- Icon -->
+                        <i class="text-white fas fa-bars"></i>
+                        </button>
+                </div>
 
 
 
