<!-- Nav Right Side -->         <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">           <!-- Social Media Button -->

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 </div>
 
                 <!-- Nav Right Side -->
+                <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">         
+                <!-- Social Media Button -->
 
 
 
