<!-- Social Media Button -->           <li class="flex items-center">             <a href="https://github.com/VitRod/Islands_Animated_Website" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"               href="#pablo">

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <!-- Nav Right Side -->
                 <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">         
                 <!-- Social Media Button -->
+                <li class="flex items-center">
+                   <a href="https://github.com/VitRod/Islands_Animated_Website" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                    href="#pablo">
 
 
 
