--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 </nav>
 <!-- End of Navigation -->
  <!-- Splash Page -->
-
+ <main>
+        <div class="relative pt-16 pb-32 flex content-center items-center justify-center" style="min-height: 75vh;">
+          <!-- Background Image -->
+          <div
+            class="absolute top-0 w-full h-full bg-center bg-cover"
+            style="background-image: url('img/bg-1.jpg')">
 
 
 
