<!-- Overlay -->         <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>       </div>

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
           <div
             class="absolute top-0 w-full h-full bg-center bg-cover"
             style="background-image: url('img/bg-1.jpg')">
-
+           <!-- Overlay -->
+           <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
+         </div>
 
 
 
