--- a/index.html
+++ b/index.html
@@ -1,71 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <title>Animated Template</title>
-        <!-- Favicon -->
-        <link rel="icon" type="image/png" href="favicon.png">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-       <!-- AOS CSS -->
-       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <!-- Tailwind Library -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <title>Animated Template</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+   <!-- AOS CSS -->
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Tailwind Library -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lemonada&display=swap" rel="stylesheet">
 </head>
 <body class="text-gray-800 antialiased">
 
-<!-- Navigation -->
-<nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">
-        <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
-                <!-- Nav Left Side -->
-                <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
-                        <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white" href="https://www.visitisleofwight.co.uk/" style="font-family: 'Lemonada', cursive;">
-                        <!-- Nav Title -->
-                                Attractions in Isle Of Wight
-                        </a>
-                        <!-- Hamburger Menu (Mobile) -->
-                        <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">
-                        <!-- Icon -->
-                        <i class="text-white fas fa-bars"></i>
-                        </button>
-                </div>
+  <!-- Navigation -->
+  <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">
+      <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
+        <!-- Nav Left Side -->
+          <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
+              <a class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap text-white" href="https://www.visitisleofwight.co.uk/" style="font-family: 'Lemonada', cursive;">
+                <!-- Nav Title -->
+                Attractions in Isle Of Wight
+              </a>
+              <!-- Hamburger Menu (Mobile) -->
+              <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">
+                <!-- Icon -->
+                <i class="text-white fas fa-bars"></i>
+              </button>
+          </div>
+          
+        <!-- Nav Right Side -->
+        <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">         
+          <!-- Social Media Button -->
+          <li class="flex items-center">
+            <a href="https://github.com/VitRod/Islands_Animated_Website" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+              href="#pablo">
+              <!-- Icon -->
+              <i class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "></i>
+              <span class="lg:hidden inline-block ml-2">Star</span>
+            </a>
+          </li>
+        </ul>
 
-                <!-- Nav Right Side -->
-                <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">         
-                <!-- Social Media Button -->
-                <li class="flex items-center">
-                   <a href="https://github.com/VitRod/Islands_Animated_Website" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                    href="#pablo">
-                    <!-- Icon -->
-                    <i class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "></i>
-                    <span class="lg:hidden inline-block ml-2">Star</span>
-                </a>
-             </li>
-           </ul>
 
-
-
-        </div>
+      </div>
     </div>
-</nav>
-<!-- End of Navigation -->
- <!-- Splash Page -->
- <main>
-        <div class="relative pt-16 pb-32 flex content-center items-center justify-center" style="min-height: 75vh;">
-          <!-- Background Image -->
-          <div
-            class="absolute top-0 w-full h-full bg-center bg-cover"
-            style="background-image: url('img/bg-1.jpg')">
-           <!-- Overlay -->
-           <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
-         </div>
+  </nav>
+  <!-- End of Navigation -->
 
-
+  <!-- Splash Page -->
+  <main>
+    <div class="relative pt-16 pb-32 flex content-center items-center justify-center" style="min-height: 75vh;">
+      <!-- Background Image -->
+      <div
+        class="absolute top-0 w-full h-full bg-center bg-cover"
+        style="background-image: url('img/bg-1.jpg')">
+        <!-- Overlay -->
+        <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
+      </div>
+      <!-- Text Over Main Background -->
+      <div class="container relative mx-auto">
+        <div class="items-center flex flex-wrap">
+          <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
+            <div class="pr-12">
+              <h1 class="text-white font-semibold text-5xl" data-aos="fade-up" style="font-family: 'Recursive', sans-serif;">
+                Welcome to the beauty of <br> <span style="font-family:'Lemonada', cursive; color: #ff3482; ">Isle Of Wight </span> 
+              </h1>
+              <p class="mt-4 text-lg text-gray-300" data-aos="fade-right" data-aos-delay="1000">
+                The Isle of Wight is an island off the south coast of England. It’s known for its beaches and seafront promenades such as sandy Shanklin Beach and south-facing Ventnor Beach, which is dotted with vintage beach huts
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
     
