--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
     </div>
     <!-- End of Splash Page -->
 
+    <!-- Services Section -->
+    <section class="pb-20 bg-gray-300 -mt-24">
+
 
 
 
