<!-- 3 Card Section -->       <div class="container mx-auto px-4">         <div class="flex flex-wrap">

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
     <!-- Services Section -->
     <section class="pb-20 bg-gray-300 -mt-24">
 
+        <!-- 3 Card Section -->
+      <div class="container mx-auto px-4">
+        <div class="flex flex-wrap">
+
 
 
 
