--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
         <!-- 3 Card Section -->
       <div class="container mx-auto px-4">
         <div class="flex flex-wrap">
-
+        <!-- Card -->
+          <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center" data-aos="fade-right" data-aos-delay="1200" >
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+              <div class="px-4 py-5 flex-auto">
+                <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-600">
+                  <!-- Icon -->           
 
 
 
