--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
               <div class="px-4 py-5 flex-auto">
                 <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-600">
-                  <!-- Icon -->           
+                  <!-- Icon -->                  
+                  <i class="fas fa-umbrella-beach"></i>
+                </div>         
 
 
 
