<!-- Text Box -->                 <h6 class="text-xl font-semibold">ISLE OF WIGHT BEACHES</h6>                 <p class="mt-2 mb-4 text-gray-600">                   The Isle of Wight is also a good option if you want a cheap UK holiday, since the beaches are so varied that you won't get bored by day three and spend the rest of the week in the cinema.                 </p>               </div>             </div>           </div>

--- a/index.html
+++ b/index.html
@@ -117,7 +117,14 @@
                   <!-- Icon -->                  
                   <i class="fas fa-umbrella-beach"></i>
                 </div>         
-
+              <!-- Text Box -->
+                <h6 class="text-xl font-semibold">ISLE OF WIGHT BEACHES</h6>
+                <p class="mt-2 mb-4 text-gray-600">
+                  The Isle of Wight is also a good option if you want a cheap UK holiday, since the beaches are so varied that you won't get bored by day three and spend the rest of the week in the cinema.
+                </p>
+              </div>
+            </div>
+          </div>
 
 
 
