<!-- Card -->           <div class="w-full md:w-4/12 px-4 text-center" data-aos="fade-up" data-aos-delay="1400">             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">               <div class="px-4 py-5 flex-auto">                 <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-blue-600">                   <!-- Icon -->

--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
               </div>
             </div>
           </div>
-
+          <!-- Card -->
+          <div class="w-full md:w-4/12 px-4 text-center" data-aos="fade-up" data-aos-delay="1400">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+              <div class="px-4 py-5 flex-auto">
+                <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-blue-600">
+                  <!-- Icon -->     
 
 
 
