--- a/index.html
+++ b/index.html
@@ -133,7 +133,14 @@
                   <!-- Icon -->                  
                   <i class="fas fa-monument"></i>
                 </div>  
-
+                <!-- Text Box -->
+                <h6 class="text-xl font-semibold">ISLE OF WIGHT ATTRACTIONS</h6>
+                <p class="mt-2 mb-4 text-gray-600">
+                  For its size, the Isle of Wight is very well equipped for summer attractions, with a good mix of adventure parks and zoos as well as historic things like castles, stately homes, museums, lighthouses and roman villas.
+                </p>
+              </div>
+            </div>
+          </div>
 
 
 
