<!-- Text Box -->                 <h6 class="text-xl font-semibold">FESTIVALS AND EVENTS</h6>                 <p class="mt-2 mb-4 text-gray-600">                   ​There are currently two BIG festivals each year on the Isle of Wight – Cowes Week and the Isle of Wight Festival. Besides that, there are several small and medium sized events like carnivals, food themed events and walking and cycling festivals.                 </p>               </div>             </div>           </div>         </div>

--- a/index.html
+++ b/index.html
@@ -149,7 +149,15 @@
                  <!-- Icon -->                  
                   <i class="fas fa-calendar-alt"></i>
                 </div>                  
-
+                <!-- Text Box -->
+                <h6 class="text-xl font-semibold">FESTIVALS AND EVENTS</h6>
+                <p class="mt-2 mb-4 text-gray-600">
+                  ​There are currently two BIG festivals each year on the Isle of Wight – Cowes Week and the Isle of Wight Festival. Besides that, there are several small and medium sized events like carnivals, food themed events and walking and cycling festivals. 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
 
