<!-- Text Box and Card Container -->         <div class="flex flex-wrap items-center mt-32">

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
           </div>
         </div>
 
+        <!-- Text Box and Card Container -->
+        <div class="flex flex-wrap items-center mt-32">
+
 
 
 
