--- a/index.html
+++ b/index.html
@@ -161,7 +161,23 @@
 
         <!-- Text Box and Card Container -->
         <div class="flex flex-wrap items-center mt-32">
-
+        <!-- Text Box Container -->
+          <div class="w-full md:w-5/12 px-4 mr-auto ml-auto" data-aos="zoom-in-right">
+            <!-- Text Box -->
+            <div class="text-gray-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-gray-100">
+              <!-- Icon -->
+              <i class="fas fa-star text-xl"></i>
+            </div>
+            <h3 class="text-3xl mb-2 font-semibold leading-normal">
+              Trying New Things is Great!
+            </h3>
+            <p class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
+              It's always heartening to see new stuff appearing on the Isle of Wight.
+            </p>
+            <p class="text-lg font-light leading-relaxed mt-0 mb-4 text-gray-700">
+             But there are also been treated to new stuff, such as Tapnell Farm Park, Eklectica and Fairweather Festival.
+            </p>           
+          </div>
 
 
 
