<!-- Image Cap & Text Card -->           <div class="w-full md:w-4/12 px-4 mr-auto ml-auto" data-aos="flip-left" data-aos-delay="1000">             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-500">               <!-- Image -->               <img                 alt="travel"                 src="img/travel-1.jpg"                 class="w-full align-middle rounded-t-lg"               />               <blockquote class="relative p-8 mb-4">                 <!-- Making Polygon Shape in Card -->                 <svg                   preserveAspectRatio="none"                   xmlns="http://www.w3.org/2000/svg"                   viewBox="0 0 583 95"                   class="absolute left-0 w-full block"                   style="height: 95px; top: -94px;"                 >                   <polygon                     points="-30,95 583,95 583,65"                     class="text-orange-500 fill-current"                   ></polygon>                 </svg>                 <!-- Text Box -->                 <h4 class="text-base text-center font-bold text-white">                   WHY YOU SHOULD VISIT THE ISLE OF WIGHT                 </h4>                 <p class="text-md font-light mt-2 text-white">                   Discover miles of unspoiled countryside and farmland as far as the eye can see. Connected by an intricate network of footpaths and cycle tracks, the Isle of Wight offers a natural playground for explorers and adrenaline junkies alike                 </p>               </blockquote>             </div>           </div>         </div>       </div>     </section>     <!-- End of Services Section -->

--- a/index.html
+++ b/index.html
@@ -179,7 +179,43 @@
             </p>           
           </div>
 
-
+        <!-- Image Cap & Text Card -->
+          <div class="w-full md:w-4/12 px-4 mr-auto ml-auto" data-aos="flip-left" data-aos-delay="1000">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-500">
+              <!-- Image -->
+              <img
+                alt="travel"
+                src="img/travel-1.jpg"
+                class="w-full align-middle rounded-t-lg"
+              />
+              <blockquote class="relative p-8 mb-4">
+                <!-- Making Polygon Shape in Card -->
+                <svg
+                  preserveAspectRatio="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 583 95"
+                  class="absolute left-0 w-full block"
+                  style="height: 95px; top: -94px;"
+                >
+                  <polygon
+                    points="-30,95 583,95 583,65"
+                    class="text-orange-500 fill-current"
+                  ></polygon>
+                </svg>
+                <!-- Text Box -->
+                <h4 class="text-base text-center font-bold text-white">
+                  WHY YOU SHOULD VISIT THE ISLE OF WIGHT
+                </h4>
+                <p class="text-md font-light mt-2 text-white">
+                  Discover miles of unspoiled countryside and farmland as far as the eye can see. Connected by an intricate network of footpaths and cycle tracks, the Isle of Wight offers a natural playground for explorers and adrenaline junkies alike
+                </p>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Services Section -->
 
 
 
