<!-- Section Container -->       <div class="container mx-auto px-4">         <div class="items-center flex flex-wrap">           <div class="w-full md:w-4/12 ml-auto mr-auto px-4" data-aos="flip-right" data-aos-delay="1000">             <!-- Image -->             <img               alt="island"               class="max-w-full rounded-lg shadow-lg"               src="img/travel-2.jpg"             />           </div>

--- a/index.html
+++ b/index.html
@@ -239,7 +239,17 @@
           ></polygon>
         </svg>
       </div>
-
+     <!-- Section Container -->
+      <div class="container mx-auto px-4">
+        <div class="items-center flex flex-wrap">
+          <div class="w-full md:w-4/12 ml-auto mr-auto px-4" data-aos="flip-right" data-aos-delay="1000">  
+            <!-- Image -->
+            <img
+              alt="island"
+              class="max-w-full rounded-lg shadow-lg"
+              src="img/travel-2.jpg" 
+            />
+          </div>
 
 
 
