<!-- Team Section -->     <section class="pt-20 pb-48">       <!-- Section Container -->       <div class="container mx-auto px-4">         <!-- Text Box -->         <div class="flex flex-wrap justify-center text-center mb-24">           <div class="w-full lg:w-6/12 px-4">             <h2 class="text-4xl font-semibold">What People Say</h2>             <p class="text-lg leading-relaxed m-4 text-gray-600">               Reviews from clients who visited  The Isle Of Wight             </p>           </div>         </div>

--- a/index.html
+++ b/index.html
@@ -312,6 +312,19 @@
     </section>
     <!-- End of About Section -->
 
+    <!-- Team Section -->
+    <section class="pt-20 pb-48">
+      <!-- Section Container -->
+      <div class="container mx-auto px-4">
+        <!-- Text Box -->
+        <div class="flex flex-wrap justify-center text-center mb-24">
+          <div class="w-full lg:w-6/12 px-4">
+            <h2 class="text-4xl font-semibold">What People Say</h2>
+            <p class="text-lg leading-relaxed m-4 text-gray-600">
+              Reviews from clients who visited  The Isle Of Wight  
+            </p>
+          </div>
+        </div>
 
 
 
@@ -322,7 +335,6 @@
 
 
 
-    
 
     <!-- End of Footer Section -->
 </body>
