<!-- Flex Row Container -->         <div class="flex flex-wrap">           <!-- Item -->           <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in">             <div class="px-6">               <!-- Image -->               <img                 alt="user-1"                 src="img/user-1.jpg"                 class="shadow-lg rounded-full max-w-full mx-auto"                 style="max-width: 120px;"               />               <div class="pt-6 text-center">                 <h5 class="text-xl font-bold">Ryan Thompson</h5>                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">                  The Isle of Wight is the perfect place to enjoy some peace, quiet and natural beauty                 </p>
              </div>
            </div>
          </div>

--- a/index.html
+++ b/index.html
@@ -326,6 +326,44 @@
           </div>
         </div>
 
+    <!-- Flex Row Container -->
+        <div class="flex flex-wrap">
+          <!-- Item -->
+          <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in">
+            <div class="px-6">
+              <!-- Image -->
+              <img
+                alt="user-1"
+                src="img/user-1.jpg"               
+                class="shadow-lg rounded-full max-w-full mx-auto"
+                style="max-width: 120px;"
+              />
+              <div class="pt-6 text-center">
+                <h5 class="text-xl font-bold">Ryan Thompson</h5>
+                <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
+                 The Isle of Wight is the perfect place to enjoy some peace, quiet and natural beauty
+                </p>                
+               
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
