<!-- Item -->           <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in" data-aos-delay="400">             <div class="px-6">               <!-- Image -->               <img                 alt="user-2"                 src="img/user-2.jpg"                 class="shadow-lg rounded-full max-w-full mx-auto"                 style="max-width: 120px;"               />               <div class="pt-6 text-center">                 <h5 class="text-xl font-bold">Romina Hadid</h5>                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">                   Except perhaps in the summer, when the Isle of Wight Festival draws visitors from all over the world                 </p>               </div>             </div>           </div>           <!-- Item -->           <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in" data-aos-delay="800">             <div class="px-6">               <!-- Image -->               <img                 alt="user-3"                 src="img/user-3.jpg"                 class="shadow-lg rounded-full max-w-full mx-auto"                 style="max-width: 120px;"               />               <div class="pt-6 text-center">                 <h5 class="text-xl font-bold">Alexa Smith</h5>                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">                   love every minute of it... it's not just about the music.. it's the whole atmosphere                 </p>               </div>             </div>           </div>           <!-- Item -->           <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in" data-aos-delay="1000">             <div class="px-6">               <!-- Image -->               <img                 alt="user-4"                 src="img/user-4.jpg"                 class="shadow-lg rounded-full max-w-full mx-auto"                 style="max-width: 120px;"               />               <div class="pt-6 text-center">

--- a/index.html
+++ b/index.html
@@ -347,7 +347,64 @@
               </div>
             </div>
           </div>
-
+        <!-- Item -->
+          <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in" data-aos-delay="400">
+            <div class="px-6">
+              <!-- Image -->
+              <img
+                alt="user-2"
+                src="img/user-2.jpg"
+                class="shadow-lg rounded-full max-w-full mx-auto"
+                style="max-width: 120px;"
+              />
+              <div class="pt-6 text-center">
+                <h5 class="text-xl font-bold">Romina Hadid</h5>
+                <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
+                  Except perhaps in the summer, when the Isle of Wight Festival draws visitors from all over the world
+                </p>                
+              </div>
+            </div>
+          </div>
+          <!-- Item -->
+          <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in" data-aos-delay="800">
+            <div class="px-6">
+              <!-- Image -->
+              <img
+                alt="user-3"
+                src="img/user-3.jpg"
+                class="shadow-lg rounded-full max-w-full mx-auto"
+                style="max-width: 120px;"
+              />
+              <div class="pt-6 text-center">
+                <h5 class="text-xl font-bold">Alexa Smith</h5>
+                <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
+                  love every minute of it... it's not just about the music.. it's the whole atmosphere
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Item -->
+          <div class="w-full md:w-6/12 lg:w-3/12 lg:mb-0 mb-12 px-4" data-aos="fade-in" data-aos-delay="1000">
+            <div class="px-6">
+              <!-- Image -->
+              <img
+                alt="user-4"
+                src="img/user-4.jpg"
+                class="shadow-lg rounded-full max-w-full mx-auto"
+                style="max-width: 120px;"
+              />
+              <div class="pt-6 text-center">
+                <h5 class="text-xl font-bold">Jenna Kardi</h5>
+                <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
+                  Brilliant atmosphere, great for families as well as singles and couples.
+                </p>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Team Section -->
 
 
 
