--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               <!-- Image -->
               <img
                 alt="user-1"
-                src="img/user-1.jpg"               
+                src="img/user-01.png"               
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
@@ -353,7 +353,7 @@
               <!-- Image -->
               <img
                 alt="user-2"
-                src="img/user-2.jpg"
+                src="img/user-02.png"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
@@ -371,7 +371,7 @@
               <!-- Image -->
               <img
                 alt="user-3"
-                src="img/user-3.jpg"
+                src="img/user-03.png"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
@@ -389,7 +389,7 @@
               <!-- Image -->
               <img
                 alt="user-4"
-                src="img/user-4.jpg"
+                src="img/user-04.png"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
