<!-- Contact Section -->     <section class="pb-20 relative block bg-gray-900">       <!-- Making Polygon Shape in Background -->       <div         class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"         style="height: 80px; transform: translateZ(0);"       >         <svg           class="absolute bottom-0 overflow-hidden"           xmlns="http://www.w3.org/2000/svg"           preserveAspectRatio="none"           version="1.1"           viewBox="0 0 2560 100"           x="0"           y="0"         >           <polygon             class="text-gray-900 fill-current"             points="2560 0 2560 100 0 100"           ></polygon>         </svg>       </div>

--- a/index.html
+++ b/index.html
@@ -406,7 +406,28 @@
     </section>
     <!-- End of Team Section -->
 
-
+  <!-- Contact Section -->
+    <section class="pb-20 relative block bg-gray-900">
+      <!-- Making Polygon Shape in Background -->
+      <div
+        class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
+        style="height: 80px; transform: translateZ(0);"
+      >
+        <svg
+          class="absolute bottom-0 overflow-hidden"
+          xmlns="http://www.w3.org/2000/svg"
+          preserveAspectRatio="none"
+          version="1.1"
+          viewBox="0 0 2560 100"
+          x="0"
+          y="0"
+        >
+          <polygon
+            class="text-gray-900 fill-current"
+            points="2560 0 2560 100 0 100"
+          ></polygon>
+        </svg>
+      </div>
 
 
 
