<!-- Section Container -->       <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">         <!-- Text Box -->         <div class="flex flex-wrap text-center justify-center">           <div class="w-full lg:w-6/12 px-4">             <h2 class="text-4xl font-semibold text-white">Plan Your Visit Today</h2>             <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">               Discover the Island from pre-historic past to the present day.             </p>           </div>         </div>

--- a/index.html
+++ b/index.html
@@ -428,7 +428,17 @@
           ></polygon>
         </svg>
       </div>
-
+    <!-- Section Container -->
+      <div class="container mx-auto px-4 lg:pt-24 lg:pb-64">
+        <!-- Text Box -->
+        <div class="flex flex-wrap text-center justify-center">
+          <div class="w-full lg:w-6/12 px-4">
+            <h2 class="text-4xl font-semibold text-white">Plan Your Visit Today</h2>
+            <p class="text-lg leading-relaxed mt-4 mb-4 text-gray-500">
+              Discover the Island from pre-historic past to the present day. 
+            </p>
+          </div>
+        </div>
 
 
 
