<!-- Flex Row Container -->         <div class="flex flex-wrap mt-12 justify-center">           <!-- Item -->           <div class="w-full lg:w-3/12 px-4 text-center" data-aos="fade-in" data-aos-delay="600">             <div class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center">               <!-- Icon -->               <i class="fas fa-medal text-xl"></i>             </div>             <!-- Text Box -->             <h5 class="text-xl mt-5 font-semibold text-white">               Excelent Services             </h5>            </div>

--- a/index.html
+++ b/index.html
@@ -439,7 +439,19 @@
             </p>
           </div>
         </div>
-
+      <!-- Flex Row Container -->
+        <div class="flex flex-wrap mt-12 justify-center">
+          <!-- Item -->
+          <div class="w-full lg:w-3/12 px-4 text-center" data-aos="fade-in" data-aos-delay="600">
+            <div class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center">
+              <!-- Icon -->
+              <i class="fas fa-medal text-xl"></i>
+            </div>
+            <!-- Text Box -->
+            <h5 class="text-xl mt-5 font-semibold text-white">
+              Excelent Services
+            </h5>
+           </div>
 
 
 
