<!-- Item -->           <div class="w-full lg:w-3/12 px-4 text-center" data-aos="fade-in" data-aos-delay="400">             <div class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center">               <!-- Icon -->               <i class="fas fa-poll text-xl"></i>             </div>             <!-- Text Box -->             <h5 class="text-xl mt-5 font-semibold text-white">               Grow your market             </h5>            </div>           <!-- Item -->           <div class="w-full lg:w-3/12 px-4 text-center" data-aos="fade-in">             <div class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center">               <!-- Icon -->               <i class="fas fa-lightbulb text-xl"></i>             </div>             <!-- Text Box -->             <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>             </div>         </div>       </div>     </section>

--- a/index.html
+++ b/index.html
@@ -452,7 +452,29 @@
               Excelent Services
             </h5>
            </div>
-
+        <!-- Item -->
+          <div class="w-full lg:w-3/12 px-4 text-center" data-aos="fade-in" data-aos-delay="400">
+            <div class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center">
+              <!-- Icon -->
+              <i class="fas fa-poll text-xl"></i>
+            </div>
+            <!-- Text Box -->
+            <h5 class="text-xl mt-5 font-semibold text-white">
+              Grow your market
+            </h5>
+           </div>
+          <!-- Item -->
+          <div class="w-full lg:w-3/12 px-4 text-center" data-aos="fade-in">
+            <div class="text-gray-900 p-3 w-12 h-12 shadow-lg rounded-full bg-white inline-flex items-center justify-center">
+              <!-- Icon -->
+              <i class="fas fa-lightbulb text-xl"></i>
+            </div>
+            <!-- Text Box -->
+            <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>
+            </div>
+        </div>
+      </div>
+    </section>
 
 
 
