--- a/index.html
+++ b/index.html
@@ -475,7 +475,18 @@
         </div>
       </div>
     </section>
-
+<!-- Contact Form -->
+    <section class="relative block py-24 lg:pt-0 bg-gray-900" data-aos="fade-in">
+      <!-- Container -->
+      <div class="container mx-auto px-4">
+        <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
+          <div class="w-full lg:w-6/12 px-4">
+            <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300">
+              <div class="flex-auto p-5 lg:p-10">
+                <h4 class="text-2xl font-semibold">We are here to help you </h4>
+                <p class="leading-relaxed mt-1 mb-4 text-gray-600">
+                  Complete this form and we will get back to you in 24 hours.
+                </p>
 
 
 
