<!-- Name -->                 <div class="relative w-full mb-3 mt-8">                   <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="full-name">                     Full Name                   </label                   ><input                     type="text"                     class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"                     placeholder="Full Name"                     style="transition: all 0.15s ease 0s;"                   />                 </div>

--- a/index.html
+++ b/index.html
@@ -488,7 +488,18 @@
                   Complete this form and we will get back to you in 24 hours.
                 </p>
 
-
+                <!-- Name -->
+                <div class="relative w-full mb-3 mt-8">
+                  <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="full-name">
+                    Full Name
+                  </label
+                  ><input
+                    type="text"
+                    class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
+                    placeholder="Full Name"
+                    style="transition: all 0.15s ease 0s;"
+                  />
+                </div>
 
 
 
