--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
       <!-- Text Box Container -->
       <div class="flex flex-wrap">
         <div class="w-full lg:w-6/12 px-4">
-          <h5 class="text-xl font-semibold">This template is from Creative Tim</h5>
+          <h5 class="text-xl font-semibold">This is a template</h5>
           <h4 class="text-3xl font-semibold">Let's keep in touch!</h4>
           <h5 class="text-lg mt-0 mb-2 text-gray-700">
             Find us on any of these platforms, we respond 1-2 business days.
