<!-- Line Break -->       <hr class="my-6 border-gray-400" />       <!-- Footer Text -->       <div class="flex flex-wrap items-center md:justify-between justify-center">         <div class="w-full md:w-4/12 px-4 mx-auto text-center">           <div class="text-sm text-gray-600 font-semibold py-1">             Copyright © 2022 Tailwind Starter Kit by             <a               href="https://www.creative-tim.com"               class="text-gray-600 hover:text-gray-900"               >Creative Tim</a             >.           </div>         </div>       </div>     </div>   </footer>

--- a/index.html
+++ b/index.html
@@ -634,7 +634,23 @@
         </div>
       </div>
 
-
+    <!-- Line Break -->
+      <hr class="my-6 border-gray-400" />
+      <!-- Footer Text -->
+      <div class="flex flex-wrap items-center md:justify-between justify-center">
+        <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+          <div class="text-sm text-gray-600 font-semibold py-1">
+            Copyright © 2022 Tailwind Starter Kit by
+            <a
+              href="https://www.creative-tim.com"
+              class="text-gray-600 hover:text-gray-900"
+              >Creative Tim</a
+            >.
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 
